feat: 同步网页版益智游戏并新增字阵寻踪
